--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "dependencies": {
     "next": "^16.0.10",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.7.4"
   }
 }
