--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,8 +1,7 @@
 services:
   database:
     image: "postgres:18.1-alpine3.23"
-    environment:
-      POSTGRES_USER: "admin"
-      POSTGRES_PASSWORD: "34454541Vw@nem"
+    env_file:
+      - ../.env
     ports:
       - "5432:5432"
